[package]
name = "ninja_syntax"
version = "0.1.0"
edition = "2021"

authors = ["Tamás Szelei <szelei.t@gmail.com>"]
description = "A Rust port of ninja_syntax.py"
license = "MIT"
repository = "https://github.com/sztomi/ninja_syntax"
homepage = "https://github.com/sztomi/ninja_syntax"
readme = "README.md"
keywords = ["ninja", "development", "build", "build-tools"]
categories = ["development-tools::build-utils"]

[dependencies]
textwrap = "0.16.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempdir = "0.3"
